--- a/ukol-3/index.html
+++ b/ukol-3/index.html
@@ -5,31 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="css.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <title>Anna Michalovová - Vizitka</title>
 </head>
 
 <body>
-    <h1> Anna Michalovová </h1>
-    <img src="fotka.jpg" width="200" alt="Anna Michalovová">
-    <p>
-        Dneska bychom ti rádi představili Anna Michalovová, naši super akční dobrovolnici z Českých Budějovic. 😃
-    </p>
-    <p>
-        Anička absolvovala Letní školu IT, dokončila gympl a pak nám začala pomáhat, koučovat a sama se účastnit
-        dalších. Czechitas kurzů. Teď je z ní testerka a studuje na Aplikované informatice. Anička hraje ráda volejbal,
-        tenis, ale i počítačové hry. Nejradši má růžovou barvu a Elsu z Frozen. 🧚‍♀„Díky Czechitas jsem nezískala jen
-        nové znalosti, ale také jsem poznala skvělé lidi. Jedinečnost Czechitas vidím hlavně v té komunitě. Mám kolem
-        sebe lidi, kteří mi vždy rádi pomohou a udělají maximum. Jsem ráda, že můžu
-        být její součást.“
-    </p>
-
-    <ul>
-        <li><a href="https://www.facebook.com/anna.michalovova"> Facebookový profil </a></li>
-        <li><a href="mailto:anna.michalovova@czechitas.cz"> Napište mi! </a></li>
-    </ul>
-
+    <header>
+        <h1> Anna Michalovová </h1>
+        <img src="fotka.jpg" width="200" alt="Anna Michalovová">
+    </header>
+    <main>
+        <p>
+            Dneska bychom ti rádi představili Anna Michalovová, naši super akční dobrovolnici z Českých Budějovic. 😃
+        </p>
+        <p>
+            Anička absolvovala Letní školu IT, dokončila gympl a pak nám začala pomáhat, koučovat a sama se účastnit
+            dalších. Czechitas kurzů. Teď je z ní testerka a studuje na Aplikované informatice. Anička hraje ráda
+            volejbal,
+            tenis, ale i počítačové hry. Nejradši má růžovou barvu a Elsu z Frozen. 🧚‍♀„Díky Czechitas jsem nezískala
+            jen
+            nové znalosti, ale také jsem poznala skvělé lidi. Jedinečnost Czechitas vidím hlavně v té komunitě. Mám
+            kolem
+            sebe lidi, kteří mi vždy rádi pomohou a udělají maximum. Jsem ráda, že můžu
+            být její součást.“
+        </p>
+        <main>
+            <footer>
+                <ul>
+                    <li><a href="https://www.facebook.com/anna.michalovova"><img src="fb.png" width="20"
+                                alt="facebook"><a href="https://www.facebook.com/anna.michalovova"> Facebookový
+                                profil </a>
+                    </li>
+                    <li><a href="mailto:anna.michalovova@czechitas.cz"><img src="mail.png" width="20" alt="mail"><a
+                                href="mailto:anna.michalovova@czechitas.cz">
+                                Napište mi! </a>
+                    </li>
+                </ul>
+            </footer>
 </body>
 
 </html>
