--- a/ukol-3/index.html
+++ b/ukol-3/index.html
@@ -11,37 +11,52 @@
 </head>
 
 <body>
-    <header>
+    <header class="main-header">
         <h1> Anna Michalovová </h1>
         <img src="fotka.jpg" width="200" alt="Anna Michalovová">
     </header>
     <main>
-        <p>
-            Dneska bychom ti rádi představili Anna Michalovová, naši super akční dobrovolnici z Českých Budějovic. 😃
-        </p>
-        <p>
-            Anička absolvovala Letní školu IT, dokončila gympl a pak nám začala pomáhat, koučovat a sama se účastnit
-            dalších. Czechitas kurzů. Teď je z ní testerka a studuje na Aplikované informatice. Anička hraje ráda
-            volejbal,
-            tenis, ale i počítačové hry. Nejradši má růžovou barvu a Elsu z Frozen. 🧚‍♀„Díky Czechitas jsem nezískala
-            jen
-            nové znalosti, ale také jsem poznala skvělé lidi. Jedinečnost Czechitas vidím hlavně v té komunitě. Mám
-            kolem
-            sebe lidi, kteří mi vždy rádi pomohou a udělají maximum. Jsem ráda, že můžu
-            být její součást.“
-        </p>
+        <section class="base-section">
+            <header>
+                <h2>O mně</h2>
+            </header>
+            <p>
+                Dneska bychom ti rádi představili Anna Michalovová, naši super akční dobrovolnici z Českých Budějovic.
+                😃
+            </p>
+            <p>
+                Anička absolvovala Letní školu IT, dokončila gympl a pak nám začala pomáhat, koučovat a sama se účastnit
+                dalších. Czechitas kurzů. Teď je z ní testerka a studuje na Aplikované informatice. Anička hraje ráda
+                volejbal,
+                tenis, ale i počítačové hry. Nejradši má růžovou barvu a Elsu z Frozen. 🧚‍♀„Díky Czechitas jsem
+                nezískala
+                jen
+                nové znalosti, ale také jsem poznala skvělé lidi. Jedinečnost Czechitas vidím hlavně v té komunitě. Mám
+                kolem
+                sebe lidi, kteří mi vždy rádi pomohou a udělají maximum. Jsem ráda, že můžu
+                být její součást.“
+            </p>
+
+        </section>
+
         <main>
-            <footer>
+
+            <footer class="main-footer">
                 <ul>
-                    <li><a href="https://www.facebook.com/anna.michalovova"><img src="fb.png" width="20"
-                                alt="facebook"><a href="https://www.facebook.com/anna.michalovova"> Facebookový
-                                profil </a>
+                    <li>
+                        <a href="https://www.facebook.com/anna.michalovova">
+                            <img src="fb.png" alt="Facebook" height="20">
+                            <span>Facebookový profil</span>
+                        </a>
                     </li>
-                    <li><a href="mailto:anna.michalovova@czechitas.cz"><img src="mail.png" width="20" alt="mail"><a
-                                href="mailto:anna.michalovova@czechitas.cz">
-                                Napište mi! </a>
+                    <li>
+                        <a href="mailto:anna.michalovova@czechitas.cz">
+                            <img src="mail.png" alt="Email" height="20">
+                            <span>Facebookový profil</span>
+                        </a>
                     </li>
                 </ul>
+
             </footer>
 </body>
 
