--- a/ukol-3/index.html
+++ b/ukol-3/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Mansalva&display=swap" rel="stylesheet">
     <title>Anna Michalovová - Vizitka</title>
 </head>
@@ -38,26 +38,26 @@
             </p>
 
         </section>
+    </main>
 
-        <main>
 
-            <footer class="main-footer">
-                <ul>
-                    <li>
-                        <a href="https://www.facebook.com/anna.michalovova">
-                            <img src="fb.png" alt="Facebook" height="20">
-                            <span>Facebookový profil</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="mailto:anna.michalovova@czechitas.cz">
-                            <img src="mail.png" alt="Email" height="20">
-                            <span>Facebookový profil</span>
-                        </a>
-                    </li>
-                </ul>
+    <footer class="main-footer">
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/anna.michalovova">
+                    <img src="fb.png" alt="Facebook" height="20">
+                    <span>Facebookový profil</span>
+                </a>
+            </li>
+            <li>
+                <a href="mailto:anna.michalovova@czechitas.cz">
+                    <img src="mail.png" alt="Email" height="20">
+                    <span>Facebookový profil</span>
+                </a>
+            </li>
+        </ul>
 
-            </footer>
+    </footer>
 </body>
 
 </html>
