--- a/ukol-4/profil.html
+++ b/ukol-4/profil.html
@@ -35,7 +35,7 @@
         </div>
 
         <ul class="odkazy">
-            <li class="portfolio"><a href="">Moje portfolio</a></li>
+            <li class="portfolio"><a href="www.google.cz">Moje portfolio</a></li>
             <!--
                 -->
             <li class="facebook"><a href="#">Facebook</a></li>
