--- a/ukol-6/index.html
+++ b/ukol-6/index.html
@@ -12,7 +12,7 @@
     <div class="obal">
 
         <!-- tvoje HTML sem -->
-        <hearder>
+        <header>
             <nav>
                 <ul class="items">
                     <li class="logo"><a href="#">SUPER APPKA</a></li>
@@ -21,11 +21,17 @@
                     <li><a href="#">Zdarma ke stažení</a></li>
                 </ul>
             </nav>
-        </hearder>
+        </header>
         <main>
-            <img class="main-background" src="pozadi.jpg" alt="gradient">
-            <img class="phone" src="telefon.png" alt="phone">
-            <main>
+            <div class="main-background">
+                <img class="background-page" src="pozadi.jpg" alt="gradient">
+                <img class="phone" src="telefon.png" alt="phone">
+            </div>
+        </main>
+        <section>
+
+            
+        </section>
 
 
 
