--- a/ukol-6/index.html
+++ b/ukol-6/index.html
@@ -26,11 +26,41 @@
             <div class="main-background">
                 <img class="background-page" src="pozadi.jpg" alt="gradient">
                 <img class="phone" src="telefon.png" alt="phone">
+                <h1 class="main-title"> Super appka </h1>
+                <h2 class="second-title"> Úžasná mobilní aplikace,</br> která Ti změní život" </h2>
+                <button class="button">Stáhnout zdarma</button>
+                <button class="button2">Více informací</button>
+
             </div>
         </main>
         <section>
+            <div class="cards">
+                <article class="card">
+                    <img src="letadlo.svg" alt="plane">
+                    <div class="text">
+                        <h3>Cestuj po světě</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
+                            ac accumsan velit cursus in.</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="bubliny.svg" alt="chat">
+                    <div class="text">
+                        <h3>Chatuj s přáteli</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
+                            ac accumsan velit cursus in.</p>
+                    </div>
+                </article>
+                <article class="card">
+                    <img src="mapa.svg" alt="map">
+                    <div class="text">
+                        <h3>Zažij dobrodružství</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
+                            ac accumsan velit cursus in.</p>
+                    </div>
+                </article>
+            </div>
 
-            
         </section>
 
 
