--- a/ukol-6/index.html
+++ b/ukol-6/index.html
@@ -24,14 +24,16 @@
         </header>
         <main>
             <div class="main-background">
-                <img class="background-page" src="pozadi.jpg" alt="gradient">
-                <img class="phone" src="telefon.png" alt="phone">
-                <h1 class="main-title"> Super appka </h1>
-                <h2 class="second-title"> Úžasná mobilní aplikace,</br> která Ti změní život" </h2>
-                <button class="button">Stáhnout zdarma</button>
-                <button class="button2">Více informací</button>
+                <div class="body">
+                    <img class="background-page" src="pozadi.jpg" alt="gradient">
+                    <img class="phone" src="telefon.png" alt="phone">
+                    <h1 class="main-title"> Super appka </h1>
+                    <h2 class="second-title"> Úžasná mobilní aplikace,</br> která Ti změní život" </h2>
+                    <button class="button">Stáhnout zdarma</button>
+                    <button class="button2">Více informací</button>
+                </div>
 
-            </div>
+
         </main>
         <section>
             <div class="cards">
@@ -60,8 +62,10 @@
                     </div>
                 </article>
             </div>
-
         </section>
+        <footer>
+            <h4 class="text-footer"> ©2016, Web od A do Z</h4>
+        </footer>
 
 
 
