--- a/ukol-6/index.html
+++ b/ukol-6/index.html
@@ -32,7 +32,7 @@
                     <button class="button">Stáhnout zdarma</button>
                     <button class="button2">Více informací</button>
                 </div>
-
+            </div>
 
         </main>
         <section>
@@ -40,25 +40,25 @@
                 <article class="card">
                     <img src="letadlo.svg" alt="plane">
                     <div class="text">
-                        <h3>Cestuj po světě</h3>
+                        <h3 class="title-card">Cestuj po světě</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
-                            ac accumsan velit cursus in.</p>
+                            ac accumsan velit cursus.</p>
                     </div>
                 </article>
                 <article class="card">
                     <img src="bubliny.svg" alt="chat">
                     <div class="text">
-                        <h3>Chatuj s přáteli</h3>
+                        <h3 class="title-card">Chatuj s přáteli</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
-                            ac accumsan velit cursus in.</p>
+                            ac accumsan velit cursus.</p>
                     </div>
                 </article>
                 <article class="card">
                     <img src="mapa.svg" alt="map">
                     <div class="text">
-                        <h3>Zažij dobrodružství</h3>
+                        <h3 class="title-card">Zažij dobrodružství</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas faucibus vestibulum erat,
-                            ac accumsan velit cursus in.</p>
+                            ac accumsan velit cursus.</p>
                     </div>
                 </article>
             </div>
