--- a/ukol-6/index.html
+++ b/ukol-6/index.html
@@ -64,7 +64,7 @@
             </div>
         </section>
         <footer>
-            <h4 class="text-footer"> ©2016, Web od A do Z</h4>
+            <div class="text-footer"> ©2016, Web od A do Z</div>
         </footer>
 
 
