--- a/ukol-7/index.html
+++ b/ukol-7/index.html
@@ -18,7 +18,7 @@
             <div class="logo"><a href="#">SUPER APPKA</a>
             </div>
             <nav>
-                <div class="menu"><img src="menu.png"> </div>
+
                 <ul class="items">
 
                     <li><a href="#">Úžasný design</a></li>
@@ -26,21 +26,20 @@
                     <li><a href="#">Zdarma ke stažení</a></li>
                 </ul>
             </nav>
+            <div class="menu"><img src="menu.png"> </div>
         </header>
         <main>
             <section class="intro-section">
 
                 <img class="phone" src="telefon.png" alt="phone">
-                <h1 class="main-title"> Super appka </h1>
-                <h2 class="second-title"> Úžasná mobilní aplikace,</br> která Ti změní život" </h2>
-                <button class="button">Stáhnout zdarma</button>
-                <button class="button2">Více informací</button>
-
+                <h1 class="main-title"> Super Appka </h1>
+                <p class="second-title"> Úžasná mobilní aplikace,</br> která Ti změní život" </p>
+                <div class="bnt-container">
+                    <button class="button">Stáhnout zdarma</button>
+                    <button class="button2">Více informací</button>
+                </div>
             </section>
-
-        </main>
-        <section>
-            <div class="cards">
+            <section class="cards">
                 <article class="card">
                     <img src="letadlo.svg" alt="plane">
 
@@ -65,8 +64,12 @@
                         ac accumsan velit cursus.</p>
 
                 </article>
-            </div>
-        </section>
+            </section>
+
+        </main>
+
+
+
         <footer>
             <div class="text-footer"> ©2016, Web od A do Z</div>
         </footer>
