--- a/ukol-8/index.html
+++ b/ukol-8/index.html
@@ -26,7 +26,7 @@
                     <li><a href="#">Zdarma ke stažení</a></li>
                 </ul>
             </nav>
-            <div class="menu" id="hambutton" onmouseover="Funkce()"> <img src="menu.png"> </div>
+            <div class="menu" id="hambutton"> <img src="menu.png"> </div>
         </header>
         <main>
             <section class="intro-section">
@@ -87,6 +87,7 @@
                     }
                 })
             }
+            Funkce()
         </script>
 
 
